remove console.error

--- a/optionTable/index.html
+++ b/optionTable/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-  <link rel="stylesheet" href=".//src/styles.css">
-  <script src="https://unpkg.com/ag-grid-enterprise@21.2.0/dist/ag-grid-enterprise.min.js"></script>
-  <script src="http://code.jquery.com/jquery-3.3.1.slim.js" integrity="sha256-fNXJFIlca05BIO2Y5zh1xrShK3ME+/lYZ0j+ChxX2DA=" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="./src/styles.css">
+  <script src="./src/ag-grid-enterprise.min.js"></script>
+  <script src="./src/jquery-3.3.1.slim.js"></script>
   <script src="./src/jquery.csv.js"></script>
   <script src="./src/main.js"></script>
 </head>
